fix dante editor flicker

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -718,6 +718,6 @@ input:focus {
     vertical-align: super;
 }
 
-.create-box {
+.tag-item {
     float: left;
 }
